--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <script src="./js/index.js"></script>
       <script src="./js/store.everything.min.js"></script>
       <!-- endbuild -->
-      <script src="fuckadblock.js"></script>
+      <script src="./fuckadblock.js"></script>
       <script></script>
    </head>
    <body>
@@ -98,7 +98,7 @@
                               <bdi>Dumbfuck</bdi>
                               &nbsp;
                               <img class="profile_flag" src="https://steamcommunity-a.akamaihd.net/public/images/countryflags/ca.gif">
-                              Canada					
+                              Canada
                            </div>
                            <div class="bg_link">
                               <div class="gray_bevel for_text_input">
@@ -141,7 +141,7 @@
                            </div>
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
-                              <div class="bb_h1" style="top:20px; position: relative; text-align:center;"> 
+                              <div class="bb_h1" style="top:20px; position: relative; text-align:center;">
                                  <b>Find us on: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> | <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a></b>
                               </div>
                            </div>
@@ -174,7 +174,7 @@
                                        <div id="big1" class="imageHolder"></div>
                                     </div>
                                     <div class="screenshot_showcase_itemname" style="color: #5491cf; font-weight: bold;">
-                                       Drag bottom of image to resize&nbsp;<div class="fa fa-arrow-up" style="font-size:10px;"></div>					
+                                       Drag bottom of image to resize&nbsp;<div class="fa fa-arrow-up" style="font-size:10px;"></div>
                                     </div>
                                     <div class="screenshot_showcase_stats">
                                        <span class="screenshot_showcase_stat" title="Комментарии">
@@ -199,7 +199,7 @@
                                     </div>
                                     <a class="screenshot_showcase_smallscreenshot screenshot_count" href="http://steamcommunity.com/id/wolfenstian/images/">
                                        <div class="screenshot_showcase_screenshot">
-                                          + 8						
+                                          + 8
                                        </div>
                                     </a>
                                  </div>
@@ -217,7 +217,7 @@
                                        <div id="big2"></div>
                                     </div>
                                     <div class="screenshot_showcase_itemname">
-                                       Mabinogi					
+                                       Mabinogi
                                     </div>
                                     <div class="screenshot_showcase_stats">
                                        <span class="screenshot_showcase_stat" title="понравилось">
@@ -242,7 +242,7 @@
                                     </div>
                                     <a class="screenshot_showcase_smallscreenshot screenshot_count" href="http://steamcommunity.com/id/wolfenstian/screenshots/">
                                        <div class="screenshot_showcase_screenshot">
-                                          + 685						
+                                          + 685
                                        </div>
                                     </a>
                                  </div>
@@ -252,7 +252,7 @@
                         </div>
                         <div class="profile_customization" style="display:none" id="ws">
                            <div class="profile_customization_header">
-                              Workshop Showcase	
+                              Workshop Showcase
                            </div>
                            <div class="myworkshop_showcase_header">
                               <div class="playerAvatar online">
@@ -300,7 +300,7 @@
                         </div>
                         <div class="profile_customization">
                            <div class="profile_customization_header guide">
-                              Favorite Guide	
+                              Favorite Guide
                            </div>
                            <div class="profile_customization_block">
                               <div class="favoriteguide_showcase">
@@ -312,17 +312,17 @@
                                        <div class="workshop_showcase_item_details">
                                           <div class="showcase_item_detail_title"><a class="whiteLink" href="http://steamcommunity.com/sharedfiles/filedetails/?id=299701202">Create Steam Background Showcases</a></div>
                                           <div class="guide_showcase_contributors">
-                                             Created by - 
-                                             <a href="http://steamcommunity.com/id/TrueCarry" class="whiteLink" data-miniprofile="55701071">TrueCarry</a>, 
-                                             <a href="http://steamcommunity.com/id/BoltActionBeats" class="whiteLink" data-miniprofile="65430799">Dr.Bolt</a>, 
-                                             <a href="http://steamcommunity.com/id/wolfenstian" class="whiteLink" data-miniprofile="68667764">SloWolfe</a>, 
-                                             <a href="http://steamcommunity.com/id/cursebroken" class="whiteLink" data-miniprofile="139708282">Curse Broken</a> and 
-                                             <a href="http://steamcommunity.com/id/theoddball" class="whiteLink" data-miniprofile="88233003">The Oddball</a>								
+                                             Created by -
+                                             <a href="http://steamcommunity.com/id/TrueCarry" class="whiteLink" data-miniprofile="55701071">TrueCarry</a>,
+                                             <a href="http://steamcommunity.com/id/BoltActionBeats" class="whiteLink" data-miniprofile="65430799">Dr.Bolt</a>,
+                                             <a href="http://steamcommunity.com/id/wolfenstian" class="whiteLink" data-miniprofile="68667764">SloWolfe</a>,
+                                             <a href="http://steamcommunity.com/id/cursebroken" class="whiteLink" data-miniprofile="139708282">Curse Broken</a> and
+                                             <a href="http://steamcommunity.com/id/theoddball" class="whiteLink" data-miniprofile="88233003">The Oddball</a>
                                           </div>
                                           <div class="guide_showcase_appinfo">
                                              <div class="workshop_showcase_stars">
                                                 <img src="http://steamcommunity-a.akamaihd.net/public/images/sharedfiles/5-star.png?v=2">
-                                                7,421 ratings																	
+                                                7,421 ratings
                                              </div>
                                              <div class="workshop_showcase_app">
                                                 <a href="http://steamcommunity.com/workshop/browse/?appid=440"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/440/e3f595a92552da3d664ad00277fad2107345f743.jpg"></a> <a class="whiteLink" href="http://steamcommunity.com/workshop/browse/?appid=440">Team Fortress 2</a>
@@ -352,7 +352,7 @@
                                  <div class="game_info_cap"><a href="http://steamcommunity.com/app/218230"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/218230/8bb9796bf871a1d620b28db4dfb2abef2138542d.jpg"></a></div>
                                  <div class="game_info_details">
                                     138 hrs on record<br>
-                                    last played on Dec 1																			
+                                    last played on Dec 1
                                  </div>
                                  <div class="game_name"><a class="whiteLink" href="http://steamcommunity.com/app/218230">PlanetSide 2</a></div>
                               </div>
@@ -372,7 +372,7 @@
                                  <div class="game_info_cap"><a href="http://steamcommunity.com/app/12900"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/12900/75dc0398efeae1cc994714e37c893b593f9c9a88.jpg"></a></div>
                                  <div class="game_info_details">
                                     19.9 hrs on record<br>
-                                    last played on Nov 30																			
+                                    last played on Nov 30
                                  </div>
                                  <div class="game_name"><a class="whiteLink" href="http://steamcommunity.com/app/12900">Audiosurf</a></div>
                               </div>
@@ -413,7 +413,7 @@
                                              </a>
                                           </div>
                                           <div class="game_info_achievement plus_more" onclick="window.location='http://steamcommunity.com/id/wolfenstian/stats/12900/achievements/'">
-                                             +2								
+                                             +2
                                           </div>
                                        </div>
                                     </div>
@@ -428,7 +428,7 @@
                                  <div class="game_info_cap"><a href="http://steamcommunity.com/app/227700"><img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/apps/227700/89c55efb73b88472ae69315dc691353955edcd98.jpg"></a></div>
                                  <div class="game_info_details">
                                     238 hrs on record<br>
-                                    last played on Nov 29																			
+                                    last played on Nov 29
                                  </div>
                                  <div class="game_name"><a class="whiteLink" href="http://steamcommunity.com/app/227700">Firefall</a></div>
                               </div>
@@ -469,7 +469,7 @@
                                              </a>
                                           </div>
                                           <div class="game_info_achievement plus_more" onclick="window.location='http://steamcommunity.com/id/wolfenstian/stats/227700/achievements/'">
-                                             +51								
+                                             +51
                                           </div>
                                        </div>
                                     </div>
@@ -503,7 +503,7 @@
                         <div class="profile_in_game_header">Currently Offline</div>
                         <div class="profile_in_game_name">Last Online: 9 hrs, 35 mins ago</div>
                      </div>
-                    <div class="rColAds"></div> 
+                    <div class="rColAds"></div>
                       <div class="profile_badges"style="display:none;">
                         <div class="profile_count_link_preview_ctn">
                            <div class="profile_count_link ellipsis">
@@ -603,7 +603,7 @@
                            </div>
                            <a class="whiteLink" href="http://steamcommunity.com/groups/OpenTester">
                            OpenTester						</a>
-                           <br>21 Members						
+                           <br>21 Members
                            <div style="clear: left;"></div>
                         </div>
                         <div class="profile_group">
@@ -614,7 +614,7 @@
                            </div>
                            <a class="whiteLink" href="http://steamcommunity.com/groups/horobox">
                            HoroBox							</a>
-                           <br>275 Members							
+                           <br>275 Members
                            <div style="clear: left;"></div>
                         </div>
                         <div class="profile_group">
@@ -625,7 +625,7 @@
                            </div>
                            <a class="whiteLink" href="http://steamcommunity.com/groups/TF2R-D">
                            TF2R.com Development Group							</a>
-                           <br>31,760 Members							
+                           <br>31,760 Members
                            <div style="clear: left;"></div>
                         </div>
                      </div>
