--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                <span class="filter" style="float:left; position:relative; display:none;">Filter: <input type="text" id="filterIn"></span>
                <span class="guide" style="float:left; position:relative; left:23%;"><a class="top_hint" href="https://www.youtube.com/watch?v=MVws18QLOi8">
                Video Guide!</a></span>
-               <div id="refreshInventory" class="fa fa-refresh" onclick="refreshInventory();" style="position:relative; top:2px; left:-16px; cursor:pointer; display:none;"></div>
-               <div id="hideBacksList" class="fa fa-arrow-up" onclick="hideBacksList();" style="position:relative; top:2px; left:-10px; cursor:pointer; display:none;"></div>
+               <div id="refreshInventory" class="fa fa-refresh" title="Refresh Inventory" onclick="refreshInventory();" style="position:relative; top:2px; left:-16px; cursor:pointer; display:none;"></div>
+               <div id="hideBacksList" class="fa fa-arrow-up" title="Hide Inventory" onclick="hideBacksList();" style="position:relative; top:2px; left:-10px; cursor:pointer; display:none;"></div>
                <div id="steamAuth" style="float:right"></div>
             </div>
             <div class="backsList" id="backsList">
@@ -142,7 +142,7 @@
                            <div class="header_real_name_spacer">&nbsp;</div>
                            <div class="profile_summary">
                               <div class="bb_h1" style="top:20px; position: relative; text-align:center;">
-                                 <b>Find us on: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> | <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a></b>
+                                 <b>Find us on: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> | <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a> | <a class="bb_link" href="https://paypal.me/theoddball" target="_blank" rel="noreferrer">PayPal.Me</a></b>
                               </div>
                            </div>
                            <div class="profile_summary_footer">
