--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
    <script src="./js/linq.min.js"></script>
    <script src="./js/jquery.smooth-scroll.min.js"></script>
    <script src="./js/interact-1.2.2.min.js"></script>
-   <script src="./js/FileSaver.js"></script>
-   <script src="./js/jszip.js"></script>
    <script src="./js/index.js"></script>
    <script src="./js/store.everything.min.js"></script>
    <!-- endbuild -->
@@ -753,54 +751,24 @@
       </div>
    </div>
    <img id="bgImgEl" style="display:none">
-   <script type="text/javascript">
-      (function(d, w, c) {
-         (w[c] = w[c] || []).push(function() {
-            try {
-               w.yaCounter27350393 = new Ya.Metrika({
-                  id: 27350393,
-                  trackHash: true
-               });
-            } catch (e) {}
-         });
-         var n = d.getElementsByTagName("script")[0],
-            s = d.createElement("script"),
-            f = function() {
-               n.parentNode.insertBefore(s, n);
-            };
-         s.type = "text/javascript";
-         s.async = true;
-         s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-         if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-         } else {
-            f();
-         }
-      })(document, window, "yandex_metrika_callbacks");
-   </script>
-   <noscript>
-         <div><img src="//mc.yandex.ru/watch/27350393" style="position:absolute; left:-9999px;" alt="" /></div>
-      </noscript>
    <script>
-      (function(i, s, o, g, r, a, m) {
-         i['GoogleAnalyticsObject'] = r;
-         i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-         }, i[r].l = 1 * new Date();
-         a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-         a.async = 1;
-         a.src = g;
-         m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+   if (window.location.hostname !== "sapic.github.io") {
+     (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+           (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+           m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-      ga('create', 'UA-98294219-1', 'auto');
-      ga('send', 'pageview');
+     ga('create', 'UA-98294219-1', 'auto');
+     ga('send', 'pageview');
+   }
    </script>
    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-   <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-   </script>
 </body>
-
 </html>
