this should fix it.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
    <script src="./js/linq.min.js"></script>
    <script src="./js/jquery.smooth-scroll.min.js"></script>
    <script src="./js/interact-1.2.2.min.js"></script>
+   <script src="./js/FileSaver.js"></script>
+   <script src="./js/jszip.js"></script>
    <script src="./js/index.js"></script>
    <script src="./js/store.everything.min.js"></script>
    <!-- endbuild -->
