--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
    <script src="./js/jszip.js"></script>
    <script src="./js/index.js"></script>
    <script src="./js/store.everything.min.js"></script>
+   <script src="./js/jQueryRotate.js"></script>
    <!-- endbuild -->
    <script src="./fuckadblock.js"></script>
    <script></script>
@@ -70,7 +71,7 @@
             <span class="guide" style="float:left; position:relative; left:23%;"><a class="top_hint" href="https://www.youtube.com/watch?v=MVws18QLOi8">
                Video Guide!</a></span>
             <div id="refreshInventory" class="fa fa-refresh" title="Refresh Inventory" onclick="refreshInventory();" style="position:relative; top:2px; left:-16px; cursor:pointer; display:none;"></div>
-            <div id="hideBacksList" class="fa fa-arrow-up" title="Hide Inventory" onclick="hideBacksList();" style="position:relative; top:2px; left:-10px; cursor:pointer; display:none;"></div>
+            <div id="hideBacksList" class="fa fa-arrow-up" title="Hide Inventory" style="position:relative; top:2px; left:-10px; cursor:pointer; display:none;"></div>
             <div id="steamAuth" style="float:right"></div>
          </div>
          <div class="backsList" id="backsList">
@@ -132,7 +133,7 @@
                            <div class="btn_profile_action btn_medium" style="left:7px; position:relative;" id="toggleLong" onclick="toggleLong()">
                               <span class="toggletext" style="width:130px; text-align:center; ">Toggle Short Images</span>
                            </div>
-                           <div class="btn_profile_action btn_medium" id="randomBG" style="left:3px; position:relative;">
+                           <div class="btn_profile_action btn_medium" id="randomBG" style="left:10px; position:relative;">
                               <span>Random BG</span>
                            </div>
                         </div>
@@ -149,8 +150,8 @@
                         </div>
                         <div class="profile_summary_footer">
                            <div class="btn_profile_action btn_medium" id="getBg"><span>Get This BG</span></div>
-                           <a class="btn_profile_action btn_medium saveButton" id="saveAll"><span>Download ZIP</span></a>
-                           <a class="btn_profile_action btn_medium" id="userScript" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/"><span>Chrome Extension</span></a>
+                           <a class="btn_profile_action btn_medium saveButton" id="saveAll" style="left:3px; position:relative;"><span>Download ZIP</span></a>
+                           <a class="btn_profile_action btn_medium" id="userScript" style="left:2px; position:relative;" href="https://chrome.google.com/webstore/detail/mjmabgdoainclinjecbkdancpamdiaih/"><span>Chrome Extension</span></a>
                         </div>
                      </div>
                   </div>
@@ -184,18 +185,18 @@
                                        <img class="screenshot_showcase_staticon" src="http://steamcommunity-a.akamaihd.net/public/images/skin_1/icon_btn_comment.png"> 1							</span>
                                  </div>
                               </div>
-                              <div id="r11r" class="screenshot_showcase_rightcol">
+                              <div id="r11r" class="screenshot_showcase_rightcol r1">
                                  <div style="height: 82px;" class="screenshot_showcase_smallscreenshot showcase_slot">
                                     <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772450', true );">
-                                       <div id="r11"></div>
+                                       <div id="r11" class="r1"></div>
                                     </div>
                                  </div>
-                                 <div id="r12r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot ">
+                                 <div id="r12r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong">
                                     <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772562', true );">
                                        <div id="r12"></div>
                                     </div>
                                  </div>
-                                 <div id="r13r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot ">
+                                 <div id="r13r" style="height: 82px; display: none;" class="screenshot_showcase_smallscreenshot showcase_slot hidelong">
                                     <div class="screenshot_showcase_screenshot" onclick="ShowModalContent( 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655&amp;insideModal=1', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', 'http://steamcommunity.com/sharedfiles/filedetails/?id=349772655', true );">
                                        <div id="r13"></div>
                                     </div>
@@ -210,7 +211,7 @@
                            </div>
                         </div>
                      </div>
-                     <div id="sssc" class="profile_customization" style="display:none">
+                     <div id="sssc" class="profile_customization hidelong" style="display:none">
                         <div class="profile_customization_header">Screenshot Showcase
                         </div>
                         <div class="profile_customization_block">
@@ -253,7 +254,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="profile_customization" style="display:none" id="ws">
+                     <div class="profile_customization hidelong" style="display:none" id="ws">
                         <div class="profile_customization_header">
                            Workshop Showcase
                         </div>
