--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
    <link rel="stylesheet" href="./css/slider.css">
    <link rel="stylesheet" href="./css/index.css">
    <!-- endbuild -->
+   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
    <!-- build:js main.js -->
    <script src="./js/jquery.min.js"></script>
    <script src="./js/linq.min.js"></script>
@@ -57,7 +58,7 @@
    <script src="./js/jQueryRotate.js"></script>
    <!-- endbuild -->
    <script src="./fuckadblock.js"></script>
-   <script></script>
+   <script>if (window.module) module = window.module;</script>
 </head>
 
 <body>
