update partner links

--- a/index.html
+++ b/index.html
@@ -592,9 +592,9 @@
                   <div class="profile_group_links profile_count_link_preview_ctn responsive_groupfriends_element">
                      <div class="profile_count_link ellipsis">
                         <a href="http://steamcommunity.com/id/wolfenstian/groups/">
-                           <span class="count_link_label">Groups</span>&nbsp;
+                           <span class="count_link_label">Partners of Steam.Design</span>&nbsp;
                            <span class="profile_count_link_total">
-                           12															</span>
+                           2															</span>
                            </a>
                      </div>
                      <div class="profile_count_link_preview">
@@ -609,26 +609,15 @@
                            <div class="profile_group_membercount">18,988 Members</div>
                            <div style="clear: left;"></div>
                         </div>
-                        <div class="profile_group">
+                        <div class="profile_group profile_primary_group">
                            <div class="profile_group_avatar">
-                              <a href="http://steamcommunity.com/groups/horobox">
-                                 <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/c4/c4e0cd46131d412abedaf776aa16b7ad11ce9a2d.jpg">
+                              <a href="http://steamcommunity.com/groups/SteamLadder/">
+                                 <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/0a/0a37b3f64c79c312280605c1fc24efc64866d681_medium.jpg">
                                  </a>
                            </div>
-                           <a class="whiteLink" href="http://steamcommunity.com/groups/horobox">
-                              HoroBox										</a>
-                           <div class="profile_group_membercount">366 Members</div>
-                           <div style="clear: left;"></div>
-                        </div>
-                        <div class="profile_group">
-                           <div class="profile_group_avatar">
-                              <a href="http://steamcommunity.com/groups/TF2R-D">
-                                 <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/5f/5f038407f2c030f3f0f634424059b9be1ebc8f9e.jpg">
-                                 </a>
-                           </div>
-                           <a class="whiteLink" href="http://steamcommunity.com/groups/TF2R-D">
-                              TF2R.com Development Group										</a>
-                           <div class="profile_group_membercount">30,119 Members</div>
+                           <a class="whiteLink" href="http://steamcommunity.com/groups/SteamLadder/">
+                              Steam Ladder										</a>
+                           <div class="profile_group_membercount">5,872 Members</div>
                            <div style="clear: left;"></div>
                         </div>
                      </div>
