small page update

--- a/index.html
+++ b/index.html
@@ -606,18 +606,18 @@
                            </div>
                            <a class="whiteLink" href="http://steamcommunity.com/groups/ArtworkProfiles">
                               Artwork Profiles									</a>
-                           <div class="profile_group_membercount">18,988 Members</div>
+                           <div class="profile_group_membercount">Celebrating the Beauty of Steam Profiles.</div>
                            <div style="clear: left;"></div>
                         </div>
                         <div class="profile_group profile_primary_group">
                            <div class="profile_group_avatar">
-                              <a href="http://steamcommunity.com/groups/SteamLadder/">
+                              <a href="https://www.steamladder.com/">
                                  <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/0a/0a37b3f64c79c312280605c1fc24efc64866d681_medium.jpg">
                                  </a>
                            </div>
-                           <a class="whiteLink" href="http://steamcommunity.com/groups/SteamLadder/">
+                           <a class="whiteLink" href="https://www.steamladder.com/">
                               Steam Ladder										</a>
-                           <div class="profile_group_membercount">5,872 Members</div>
+                           <div class="profile_group_membercount">Leaderboard and ranking site for Steam profiles!</div>
                            <div style="clear: left;"></div>
                         </div>
                      </div>
