--- a/index.html
+++ b/index.html
@@ -632,97 +632,52 @@
                   <div class="profile_friend_links profile_count_link_preview_ctn responsive_groupfriends_element">
                      <div class="profile_count_link ellipsis">
                         <a href="http://steamcommunity.com/id/wolfenstian/friends/">
-                           <span class="count_link_label">Friends</span>&nbsp;
+                           <span class="count_link_label">Developers</span>&nbsp;
                            <span class="profile_count_link_total">
-                           138															</span>
+                           3															</span>
                            </a>
                      </div>
                      <div class="profile_topfriends profile_count_link_preview">
-                        <div class="friendBlock persona online" data-miniprofile="81923623">
-                           <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/BearCute"></a>
-                           <div class="friendPlayerLevel lvl_200 lvl_plus_20">
-                              <span class="friendPlayerLevelNum">225</span>
+                       <div class="friendBlock persona" data-miniprofile="88233003" style="color:#b436ad">
+                          <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/TheOddball"></a>
+                          <div class="friendPlayerLevel lvl_100 lvl_plus_60">
+                             <span class="friendPlayerLevelNum">161</span>
+                          </div>
+                          <div class="playerAvatar online" style="background-color:#b436ad;background: #b436ad;">
+                             <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/cc/ccde65df82663035d24461a27c21ecaccfb6872f_medium.jpg" style="background-color:#b436ad;background: #b436ad;">
+                          </div>
+                          <div class="friendBlockContent">
+                             The Oddball<br>
+                             <span class="friendSmallText">
+                                Online
+                                </span>
+                          </div>
+                       </div>
+                       <div class="friendBlock persona online" data-miniprofile="68667764" style="color:#5a181e">
+                          <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/wolfenstian"></a>
+                          <div class="friendPlayerLevel lvl_60">
+                             <span class="friendPlayerLevelNum">63</span>
+                          </div>
+                          <div class="playerAvatar online" style="background-color:#5a181e;background: #5a181e;">
+                             <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/cc/cc2ba4deaf53f2b916efa115de2437c87dfe9cf2_medium.jpg" style="background-color:#5a181e;background: #5a181e;">
+                          </div>
+                          <div class="friendBlockContent">
+                             SloWolfe<br>
+                             <span class="friendSmallText">
+                                Online
+                                </span>
+                          </div>
+                       </div>
+                        <div class="friendBlock persona" data-miniprofile="55701071" style="color:#8b6e4e">
+                           <a class="friendBlockLinkOverlay" href="https://steamcommunity.com/id/TrueCarry"></a>
+                           <div class="friendPlayerLevel lvl_30">
+                              <span class="friendPlayerLevelNum">31</span>
                            </div>
-                           <div class="playerAvatar online">
-                              <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/c3/c344780a2922917d9f541bd4fb8a7e3c1a192ed3_medium.jpg">
-                           </div>
-                           <div class="friendBlockContent">
-                              🌈Ｂℴｂ☆ʙᴏʙ🌈<br>
-                              <span class="friendSmallText">
-                                 Online
-                                 </span>
-                           </div>
-                        </div>
-                        <div class="friendBlock persona online" data-miniprofile="32121259">
-                           <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/slayerofkrypt"></a>
-                           <div class="friendPlayerLevel lvl_200 lvl_plus_0">
-                              <span class="friendPlayerLevelNum">205</span>
-                           </div>
-                           <div class="playerAvatar online">
-                              <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/17/177c181fa8fe13de4ec4c46509da683f53d92a2e_medium.jpg">
-                           </div>
-                           <div class="friendBlockContent">
-                              Joski<br>
-                              <span class="friendSmallText">
-                                 Online
-                                 </span>
-                           </div>
-                        </div>
-                        <div class="friendBlock persona online" data-miniprofile="74581638">
-                           <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/Zordack"></a>
-                           <div class="friendPlayerLevel lvl_200 lvl_plus_0">
-                              <span class="friendPlayerLevelNum">205</span>
-                           </div>
-                           <div class="playerAvatar online">
-                              <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/1b/1b9efffffecbbe58484fc5b673e58a058ddff567_medium.jpg">
-                           </div>
-                           <div class="friendBlockContent">
-                              Zordack<br>
-                              <span class="friendSmallText">
-                                 Online
-                                 </span>
-                           </div>
-                        </div>
-                        <div class="friendBlock persona online" data-miniprofile="252445180">
-                           <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/ElSalvadore75"></a>
-                           <div class="friendPlayerLevel lvl_100 lvl_plus_90">
-                              <span class="friendPlayerLevelNum">190</span>
-                           </div>
-                           <div class="playerAvatar online">
-                              <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/6c/6c4f87cc55b43e917b4d61109cf6b40c9220f17f_medium.jpg">
+                           <div class="playerAvatar online" style="background-color:#8b6e4e;background: #8b6e4e;">
+                              <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/76/76ed70e8addd6a8c58352d850f881a3385235177_medium.jpg" style="background-color:#8b6e4e;background: #8b6e4e;">
                            </div>
                            <div class="friendBlockContent">
-                              El Salvadore<br>
-                              <span class="friendSmallText">
-                                 Online
-                                 </span>
-                           </div>
-                        </div>
-                        <div class="friendBlock persona offline" data-miniprofile="137069223">
-                           <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/karrie7"></a>
-                           <div class="friendPlayerLevel lvl_100 lvl_plus_60">
-                              <span class="friendPlayerLevelNum">164</span>
-                           </div>
-                           <div class="playerAvatar offline">
-                              <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/0b/0b7c231e53d149922bcb858d247a37d11a7d5fb7_medium.jpg">
-                           </div>
-                           <div class="friendBlockContent">
-                              Karrie ♥<br>
-                              <span class="friendSmallText">
-                                 Last Online 3 days ago
-                                 </span>
-                           </div>
-                        </div>
-                        <div class="friendBlock persona online" data-miniprofile="88233003">
-                           <a class="friendBlockLinkOverlay" href="http://steamcommunity.com/id/TheOddball"></a>
-                           <div class="friendPlayerLevel lvl_100 lvl_plus_60">
-                              <span class="friendPlayerLevelNum">160</span>
-                           </div>
-                           <div class="playerAvatar online">
-                              <img src="http://cdn.edgecast.steamstatic.com/steamcommunity/public/images/avatars/b5/b53954c68ce8c3462448af2bd79d60c51126a3e4_medium.jpg">
-                           </div>
-                           <div class="friendBlockContent">
-                              The Oddball<br>
+                              TrueCarry<br>
                               <span class="friendSmallText">
                                  Online
                                  </span>
