--- a/index.html
+++ b/index.html
@@ -708,22 +708,13 @@
    </div>
    <img id="bgImgEl" style="display:none">
    <script>
-      if (window.location.hostname !== "sapic.github.io") {
-         (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-               (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-               m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-         ga('create', 'UA-98294219-1', 'auto');
-         ga('send', 'pageview');
-      }
+   !function(t,e,a){(e[a]=e[a]||[]).push(function(){try{e.yaCounter27350393=new Ya.Metrika({id:27350393,trackHash:!0})}catch(t){}});var n=t.getElementsByTagName("script")[0],c=t.createElement("script"),r=function(){n.parentNode.insertBefore(c,n)};c.type="text/javascript",c.async=!0,c.src=("https:"==t.location.protocol?"https:":"http:")+"//mc.yandex.ru/metrika/watch.js","[object Opera]"==e.opera?t.addEventListener("DOMContentLoaded",r,!1):r()}(document,window,"yandex_metrika_callbacks");
+   </script>
+   <noscript>
+      <div><img src="//mc.yandex.ru/watch/27350393" style="position:absolute; left:-9999px;" alt="" /></div>
+   </noscript>
+   <script>
+"sapic.github.io"!==window.location.hostname&&(!function(e,t,a,n,o,c,i){e.GoogleAnalyticsObject=o,e[o]=e[o]||function(){(e[o].q=e[o].q||[]).push(arguments)},e[o].l=1*new Date,c=t.createElement(a),i=t.getElementsByTagName(a)[0],c.async=1,c.src="https://www.google-analytics.com/analytics.js",i.parentNode.insertBefore(c,i)}(window,document,"script",0,"ga"),ga("create","UA-98294219-1","auto"),ga("send","pageview"));
    </script>
    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
