--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                        </div>
                         <div class="friendBlock persona" data-miniprofile="55701071" style="color:#8b6e4e">
                            <a class="friendBlockLinkOverlay" href="https://steamcommunity.com/id/TrueCarry"></a>
-                           <div class="friendPlayerLevel lvl_30">
+                           <div class="friendPlayerLevel lvl_30" style:"border-color:#fecc23;">
                               <span class="friendPlayerLevelNum">31</span>
                            </div>
                            <div class="playerAvatar online" style="background-color:#8b6e4e;background: #8b6e4e;">
