--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <div class="header_real_name_spacer">&nbsp;</div>
                         <div class="profile_summary">
                            <div class="bb_h1" style="top:20px; position: relative; text-align:center;">
-                              <b>Find us on: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> | <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a> | <a class="bb_link" href="https://paypal.me/theoddball" target="_blank" rel="noreferrer">PayPal.Me</a></b>
+                              <b>Find us on: <a class="bb_link" href="https://www.patreon.com/steamdesign" target="_blank" rel="noreferrer">Patreon</a> | <a class="bb_link" href="https://github.com/sapic/sapic" target="_blank" rel="noreferrer">GitHub</a></b>
                            </div>
                         </div>
                         <div class="profile_summary_footer">
